# wrapland

./: .clang-format  .clang-tidy  .gitignore  .gitlab-ci.yml  .versionrc.json  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  README.md  WraplandConfig.cmake.in  commitlint.config.js
.github/actions/message-lint/: Dockerfile  action.yml  entrypoint.sh
.github/actions/test/: action.yml
.github/workflows/: build.yml  change.yml  commit-lint.yml  pull_request.yml  rebuild.yml
autotests/: CMakeLists.txt
autotests/client/: CMakeLists.txt  appmenu.cpp  blur.cpp  compositor.cpp  connection_thread.cpp  contrast.cpp  data_control.cpp  data_device.cpp  data_source.cpp  drag_and_drop.cpp  drm_lease_v1.cpp  error.cpp  external_sources.cpp  fake_input.cpp  filter.cpp  fullscreen_shell.cpp  idle_notify.cpp  input_method_v2.cpp  kde_idle.cpp  keyboard_shortcuts_inhibitor.cpp  layer_shell.cpp  linux_dmabuf.cpp  output.cpp  output_device.cpp  output_management.cpp  plasma_activation_feedback.cpp  plasma_shell.cpp  plasma_virtual_desktop.cpp  plasma_window_management.cpp  plasma_window_model.cpp  pointer_constraints.cpp  pointer_gestures_v1.cpp  presentation_time.cpp  primary_selection.cpp  region.cpp  registry.cpp  remote_access.cpp  seat.cpp  security_context.cpp  selection.cpp  (+68 more)
autotests/server/: CMakeLists.txt  display.cpp  surfaceextension_helper.cpp  test_display.cpp  test_no_xdg_runtime_dir.cpp  test_qt_surface_extension.cpp  test_seat.cpp
ci/: README.md  commitlint.config.js  gitlab-ci.yml
ci/compliance/: clang-format.sh  clang-tidy.sh
ci/release/: beta-prepare.sh  beta-update-prepare.sh  stable-minor-prepare.sh  stable-prepare.sh
cmake/Modules/: BuildType.cmake  FindWaylandProtocols.cmake  Packing.cmake
docs/: Doxyfile.local
server/: CMakeLists.txt  abstract_data_source.cpp  abstract_data_source.h  appmenu.cpp  appmenu.h  appmenu_p.h  blur.cpp  blur.h  blur_p.h  buffer.cpp  buffer.h  buffer_p.h  client.cpp  client.h  client_p.h  compositor.cpp  compositor.h  contrast.cpp  contrast.h  contrast_p.h  data_control_v1.cpp  data_control_v1.h  data_control_v1_p.h  data_device.cpp  data_device.h  data_device_manager.cpp  data_device_manager.h  data_offer.cpp  data_offer.h  data_offer_p.h  data_source.cpp  data_source.h  data_source_p.h  display.cpp  display.h  display_p.h  dpms.cpp  dpms.h  dpms_p.h  drag_pool.cpp  (+200 more)
server/wayland/: bind.h  buffer_manager.cpp  buffer_manager.h  capsule.h  client.cpp  client.h  display.cpp  display.h  global.cpp  global.h  nucleus.h  resource.cpp  resource.h  send.h
src/: CMakeLists.txt  org_kde_wrapland.categories
src/client/: CMakeLists.txt  appmenu.cpp  appmenu.h  blur.cpp  blur.h  buffer.cpp  buffer.h  buffer_p.h  compositor.cpp  compositor.h  connection_thread.cpp  connection_thread.h  contrast.cpp  contrast.h  data_control_v1.cpp  data_control_v1.h  data_control_v1_p.h  datadevice.cpp  datadevice.h  datadevicemanager.cpp  datadevicemanager.h  dataoffer.cpp  dataoffer.h  datasource.cpp  datasource.h  dpms.cpp  dpms.h  drm_lease_v1.cpp  drm_lease_v1.h  drm_lease_v1_p.h  event_queue.cpp  event_queue.h  fakeinput.cpp  fakeinput.h  fullscreen_shell.cpp  fullscreen_shell.h  idle.cpp  idle.h  idle_notify_v1.cpp  idle_notify_v1.h  (+133 more)
src/client/protocols/: fake-input.xml  idle.xml  kwinft-output-device-unstable-v1.xml  kwinft-output-management-unstable-v1.xml  plasma-shell.xml  server-decoration-palette.xml  wlr-layer-shell-unstable-v1.xml  wlr-output-management-unstable-v1.xml
src/server/: CMakeLists.txt  appmenu_interface.cpp  appmenu_interface.h  blur_interface.cpp  blur_interface.h  buffer_interface.cpp  buffer_interface.h  clientconnection.cpp  clientconnection.h  compositor_interface.cpp  compositor_interface.h  contrast_interface.cpp  contrast_interface.h  datadevice_interface.cpp  datadevice_interface.h  datadevicemanager_interface.cpp  datadevicemanager_interface.h  dataoffer_interface.cpp  dataoffer_interface.h  dataoffer_interface_p.h  datasource_interface.cpp  datasource_interface.h  display.cpp  display.h  dpms_interface.cpp  dpms_interface.h  dpms_interface_p.h  eglstream_controller_interface.cpp  eglstream_controller_interface.h  eglstream_controller_interface_p.h  fakeinput_interface.cpp  fakeinput_interface.h  filtered_display.cpp  filtered_display.h  generic_shell_surface_p.h  global.cpp  global.h  global_p.h  idle_interface.cpp  idle_interface.h  (+109 more)
src/tools/: CMakeLists.txt  generator.cpp  generator.h  mapping.txt
src/tools/testserver/: CMakeLists.txt  main.cpp  testserver.cpp  testserver.h
tests/: CMakeLists.txt  copyclient.cpp  dpmstest.cpp  globals.h  helpers.h  paneltest.cpp  pasteclient.cpp  plasmasurfacetest.cpp  qtwaylandintegrationtest.cpp  qtwaylandintegrationtest.h  renderingservertest.cpp  shadowtest.cpp  subsurfacetest.cpp  touchclienttest.cpp  touchclienttest.h  waylandservertest.cpp  xdgforeigntest.cpp  xdgtest.cpp
tooling/: README.md
tooling/analysis/: clang-format.sh  clang-tidy.sh  coverity_scan_model.cpp
tooling/docs/: commitlint.config.js
tooling/release/: beta-prepare.sh  stable-minor-prepare.sh  stable-patch-prepare.sh
